[gd_scene load_steps=5 format=3 uid="uid://ruysmf55cnx2"]

[ext_resource type="Script" path="res://Tools/ui.gd" id="1_bqphi"]
[ext_resource type="FontFile" uid="uid://cdc36a7ka1xub" path="res://Fonts/NotJamMonoProphet/Not Jam Mono Prophet 8.ttf" id="1_mco4l"]
[ext_resource type="Texture2D" uid="uid://dv14mre6k6skx" path="res://icon.svg" id="2_hefec"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7e32b"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
corner_detail = 1

[node name="UI" type="Control"]
custom_minimum_size = Vector2(256, 64)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -176.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bqphi")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
offset_right = 256.0
offset_bottom = 64.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_fonts/font = ExtResource("1_mco4l")
theme_override_font_sizes/font_size = 8
text = "SCORE"

[node name="Score" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_fonts/font = ExtResource("1_mco4l")
theme_override_font_sizes/font_size = 8
text = "000000"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 6

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_fonts/font = ExtResource("1_mco4l")
theme_override_font_sizes/font_size = 8
text = "TIME"

[node name="Time" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_fonts/font = ExtResource("1_mco4l")
theme_override_font_sizes/font_size = 8
text = "0400"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_fonts/font = ExtResource("1_mco4l")
theme_override_font_sizes/font_size = 8
text = "STAGE"

[node name="StageNum" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_fonts/font = ExtResource("1_mco4l")
theme_override_font_sizes/font_size = 8
text = "01"

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_constants/separation = 6

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("1_mco4l")
theme_override_font_sizes/font_size = 8
text = "PLAYER"

[node name="PlayerHealth" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_colors/font_color = Color(0.764706, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_mco4l")
theme_override_font_sizes/font_size = 4
text = "||||||||||||||||"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("1_mco4l")
theme_override_font_sizes/font_size = 8
text = "ENEMY "

[node name="EnemyHealth" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_mco4l")
theme_override_font_sizes/font_size = 4
text = "||||||||||||||||"

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_7e32b")

[node name="CurrentItem" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer4/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_top = 1.0
offset_right = -14.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_hefec")
expand_mode = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_constants/separation = 5

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_fonts/font = ExtResource("1_mco4l")
theme_override_font_sizes/font_size = 8
text = "H
"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_fonts/font = ExtResource("1_mco4l")
theme_override_font_sizes/font_size = 8
text = "-
"

[node name="Hearts" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_fonts/font = ExtResource("1_mco4l")
theme_override_font_sizes/font_size = 8
text = "05
"

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer2/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_fonts/font = ExtResource("1_mco4l")
theme_override_font_sizes/font_size = 8
text = "P"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer2/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_fonts/font = ExtResource("1_mco4l")
theme_override_font_sizes/font_size = 8
text = "-"

[node name="TryCounter" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer2/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_fonts/font = ExtResource("1_mco4l")
theme_override_font_sizes/font_size = 8
text = "03
"
